--- a/index.html
+++ b/index.html
@@ -4,6 +4,258 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h2>Navbar section</h2>
+    </nav>
+
+    <main>
+      <header>
+        <div class="header-left">
+          <h1>20小時<br />從零開始<br />掌握3D世界!</h1>
+          <h3>
+            專為初學者而設的Blender線上課程，從基礎操作到進階應用，幫助你一步一步成為3D創作高手！
+          </h3>
+          <div class="header-btns">
+            <button>立即報名</button>
+            <button>了解更多</button>
+          </div>
+          <img src="./assets/images/Blender logo.svg" alt="blender-logo" />
+        </div>
+
+        <div class="header-right">
+          <div class="hero-img"></div>
+        </div>
+      </header>
+
+      <div class="divider"></div>
+
+      <div class="course-overview-section">
+        <div class="course-overview-left">
+          <h2>創作者的最佳起點，<br />帶你全面入門<br />Blender！</h2>
+          <h3>無需任何建模經驗，20小時的專業內容將帶你探索3D的無限可能</h3>
+          <button>下載課程大綱PDF</button>
+        </div>
+        <div class="course-overview-right">
+          <div class="course-overview-card-top-row">
+            <div class="course-overview-card">
+              <h4>適合零基礎學員，內容循序漸進，降低學習門檻</h4>
+              <ul>
+                <li>完全針對初學者設計，無需任何3D建模經驗</li>
+                <li>
+                  從操作介面、基礎建模，到材質、燈光、動畫與進階模擬，讓學員能穩步掌握每個關鍵技能
+                </li>
+              </ul>
+            </div>
+            <div class="course-overview-card">
+              <h4>分階段學習，提供清晰的進度規劃</h4>
+              <ul>
+                <li>
+                  課程分為6大學習模塊與76個單元，系統化拆解每個核心技術，讓學員以按自己的節奏深入學習
+                </li>
+                <li>各單元內容搭配實作練習，學員能即學即用，快速累積成果</li>
+              </ul>
+            </div>
+          </div>
+          <div class="course-overview-card-bottom-row">
+            <div class="course-overview-card">
+              <h4>強調實用性與成果導向</h4>
+              <ul>
+                <li>
+                  學員能透過多種練習模組，掌握建模、材質、燈光、渲染與動畫的完整流程，並學會創建高品質的3D
+                  圖像與動態效讓學員以按自己的節奏深入學習
+                </li>
+                <li>
+                  提供進階模擬技巧，例如火焰與液體效果，讓學員的作品更加豐富與專業
+                </li>
+              </ul>
+            </div>
+            <div class="course-overview-card">
+              <h4>多語言支持，學習更靈活、更國際化？</h4>
+              <ul>
+                <li>
+                  課程提供繁體中文、簡體中文、英文三種語言，搭配字幕輔助，滿足不同學員需求
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="course-feature-section">
+        <h2>
+          不論你是對3D有興趣，還是想打造專業作品，<br />這門課程都能幫助你輕鬆入門
+        </h2>
+
+        <div class="features">
+          <div class="feature">
+            <img src="./assets/images/icons/module 1.png" alt="puzzle-piece" />
+            <h2><span id="feature-stat">6</span>大學習模塊</h2>
+            <div class="orange-line"></div>
+          </div>
+
+          <div class="feature">
+            <img src="./assets/images/icons/unit 1.png" alt="puzzle-piece" />
+            <h2><span id="feature-stat">76</span>個單元</h2>
+            <div class="orange-line"></div>
+          </div>
+          <div class="feature">
+            <img src="./assets/images/icons/globe 1.png" alt="puzzle-piece" />
+            <h2><span id="feature-stat">3</span>種語言</h2>
+            <div class="orange-line"></div>
+          </div>
+        </div>
+      </div>
+
+      <section id="course-highlights">
+        <h2>課程亮點</h2>
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-ride="carousel"
+          data-interval="false"
+        >
+          <ol class="carousel-indicators">
+            <li
+              data-target="#carouselExampleIndicators"
+              data-slide-to="0"
+              class="active"
+            ></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                class="d-block w-100"
+                src="./assets/images/1c82c09c7840dbf9dace6b74493774e0.jpg"
+                alt="First slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="./assets/images/97236088ca13ad12e54b88b87cf4d04c.jpg"
+                alt="Second slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="./assets/images/solveig-horsfield-wireframe.jpg"
+                alt="Third slide"
+              />
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExampleIndicators"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExampleIndicators"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
+
+      <section id="cta">
+        <div class="cta-content">
+          <div class="cta-left">
+            <div class="cta-img-container"><h2>還在猶豫？</h2></div>
+          </div>
+          <div class="cta-right">
+            <h2>先試試我們的2小時免費課程!</h2>
+            <p>
+              凡報名參加2025年3D創作才華長示活動參賽者，即享2小時免費Blender入門課程
+            </p>
+            <div class="course-detail-container">
+              <div class="course-detail">
+                <img
+                  class="course-detail-icon"
+                  src="./assets/images/icons/user-group-solid.svg"
+                  alt="icon1"
+                />
+                <p>適合初學者，無需任何建模經驗</p>
+              </div>
+
+              <div class="course-detail">
+                <img
+                  class="course-detail-icon"
+                  src="./assets/images/icons/clock-solid.svg"
+                  alt="icon2"
+                />
+                <p>2小時</p>
+              </div>
+
+              <div class="course-detail">
+                <img
+                  class="course-detail-icon"
+                  src="./assets/images/icons/language-solid.svg"
+                  alt="icon2"
+                />
+                <p>繁體中文，簡體中文，英文</p>
+              </div>
+            </div>
+            <button>下載課程大綱PDF</button>
+          </div>
+        </div>
+      </section>
+
+      <section id="course-certificate">
+        <h2>課程證書</h2>
+        <div>
+          <div id="IABE-certified">
+            <h2>獲得由IABE頒發的Blender認證</h2>
+            <img src="./assets/images/iabe_logo.png" alt="IABE Logo" />
+          </div>
+          <h2>
+            我們與全球的教育工作者設計Blender徽章系統，在這個基礎上推出Blender認証，幫助學員衡量在不同學習領域中使用
+            Blender的知識和實用技能
+          </h2>
+        </div>
+      </section>
+
+      <footer>
+        <h2>Footer Section</h2>
+      </footer>
+    </main>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
