added header video

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         </div>
 
         <div class="header-right">
-          <div class="hero-img"></div>
+          <div class="hero-container">
+            <video
+              src="./assets/videos/6236756-uhd_3840_2160_25fps.mp4"
+              loop
+              autoplay
+              muted
+            ></video>
+          </div>
         </div>
       </header>
 
@@ -121,6 +128,7 @@
 
       <section id="course-highlights">
         <h2>課程亮點</h2>
+
         <div
           id="carouselExampleIndicators"
           class="carousel slide"
@@ -143,6 +151,15 @@
                 src="./assets/images/1c82c09c7840dbf9dace6b74493774e0.jpg"
                 alt="First slide"
               />
+              <div class="carousel-overlay">
+                <h2>Hello</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
+                  quibusdam consectetur beatae aspernatur tempore tempora
+                  dolorum, odio laudantium aut repellat asperiores, quaerat
+                  corporis iure molestiae libero illo quas ipsa quia.
+                </p>
+              </div>
             </div>
             <div class="carousel-item">
               <img
@@ -150,6 +167,15 @@
                 src="./assets/images/97236088ca13ad12e54b88b87cf4d04c.jpg"
                 alt="Second slide"
               />
+              <div class="carousel-overlay">
+                <h2>Hello</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
+                  quibusdam consectetur beatae aspernatur tempore tempora
+                  dolorum, odio laudantium aut repellat asperiores, quaerat
+                  corporis iure molestiae libero illo quas ipsa quia.
+                </p>
+              </div>
             </div>
             <div class="carousel-item">
               <img
@@ -157,6 +183,15 @@
                 src="./assets/images/solveig-horsfield-wireframe.jpg"
                 alt="Third slide"
               />
+              <div class="carousel-overlay">
+                <h2>Hello</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
+                  quibusdam consectetur beatae aspernatur tempore tempora
+                  dolorum, odio laudantium aut repellat asperiores, quaerat
+                  corporis iure molestiae libero illo quas ipsa quia.
+                </p>
+              </div>
             </div>
           </div>
           <a
