--- a/learning_res.html
+++ b/learning_res.html
@@ -14,7 +14,7 @@
     />
 
     <!-- CSS Link -->
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/learning_res.css" />
   </head>
   <body>
     <nav>
@@ -151,14 +151,12 @@
                 src="./assets/images/1c82c09c7840dbf9dace6b74493774e0.jpg"
                 alt="First slide"
               />
-              <div class="carousel-overlay">
-                <h2>Hello</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
-                  quibusdam consectetur beatae aspernatur tempore tempora
-                  dolorum, odio laudantium aut repellat asperiores, quaerat
-                  corporis iure molestiae libero illo quas ipsa quia.
-                </p>
+              <div class="carousel-overlay"></div>
+              <div class="course-highlights-text-content">
+                <h2>全面掌握Blender核心技術</h2>
+                <hr />
+                <p>從建模、材質、燈光到動畫與渲染，涵蓋3D製作的完整流程</p>
+                <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
             <div class="carousel-item">
@@ -167,14 +165,12 @@
                 src="./assets/images/97236088ca13ad12e54b88b87cf4d04c.jpg"
                 alt="Second slide"
               />
-              <div class="carousel-overlay">
-                <h2>Hello</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
-                  quibusdam consectetur beatae aspernatur tempore tempora
-                  dolorum, odio laudantium aut repellat asperiores, quaerat
-                  corporis iure molestiae libero illo quas ipsa quia.
-                </p>
+              <div class="carousel-overlay"></div>
+              <div class="course-highlights-text-content">
+                <h2>全面掌握Blender核心技術</h2>
+                <hr />
+                <p>從建模、材質、燈光到動畫與渲染，涵蓋3D製作的完整流程</p>
+                <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
             <div class="carousel-item">
@@ -183,14 +179,12 @@
                 src="./assets/images/solveig-horsfield-wireframe.jpg"
                 alt="Third slide"
               />
-              <div class="carousel-overlay">
-                <h2>Hello</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et
-                  quibusdam consectetur beatae aspernatur tempore tempora
-                  dolorum, odio laudantium aut repellat asperiores, quaerat
-                  corporis iure molestiae libero illo quas ipsa quia.
-                </p>
+              <div class="carousel-overlay"></div>
+              <div class="course-highlights-text-content">
+                <h2>全面掌握Blender核心技術</h2>
+                <hr />
+                <p>從建模、材質、燈光到動畫與渲染，涵蓋3D製作的完整流程</p>
+                <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
           </div>
