finished the ui design

--- a/learning_res.html
+++ b/learning_res.html
@@ -43,6 +43,7 @@
               autoplay
               muted
             ></video>
+            <div class="header-overlay"></div>
           </div>
         </div>
       </header>
