add shake animation to elements

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="course-overview-right">
           <div class="course-overview-card-top-row">
-            <div data-aos="fade-up" class="course-overview-card">
+            <div class="course-overview-card tilted-card">
               <h4>適合零基礎學員，內容循序漸進，降低學習門檻</h4>
               <ul>
                 <li>完全針對初學者設計，無需任何3D建模經驗</li>
