--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             專為初學者而設的Blender線上課程，從基礎操作到進階應用，幫助你一步一步成為3D創作高手！
           </h3>
           <div class="header-btns">
-            <button>立即報名</button>
+            <button>
+              <a
+                href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/register/"
+                >立即報名</a
+              >
+            </button>
             <button class="learn-more-btn">了解更多</button>
           </div>
           <img src="./assets/images/Blender logo.svg" alt="blender-logo" />
