--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div data-aos="fade-left" class="header-right">
           <div class="hero-container">
             <video
-              src="./assets/videos/6236756-uhd_3840_2160_25fps.mp4"
+              src="./assets/videos/blender.mp4"
               loop
               autoplay
               muted
