--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
         <div>
           <div id="IABE-certified">
             <h2>獲得由IABE頒發的Blender認證</h2>
-            <img src="./assets/images/iabe_logo.png" alt="IABE Logo" />
+            <a href="https://iabe.io/en/" target="_blank">
+              <img src="./assets/images/iabe_logo.png" alt="IABE Logo" />
+            </a>
           </div>
           <h2>
             我們與全球的教育工作者設計Blender徽章系統，在這個基礎上推出Blender認証，幫助學員衡量在不同學習領域中使用
