--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <header>
         <div data-aos="fade-right" class="header-left">
           <h1>
-            <span id="header-num-count"></span
-            >小時<br />從零開始<br />掌握3D世界!
+            <span id="twenty-hour">
+              <span id="header-num-count"></span>小時</span
+            ><br />從零開始<br />掌握3D世界!
           </h1>
           <h3>
             專為初學者而設的Blender線上課程，從基礎操作到進階應用，幫助你一步一步成為3D創作高手！
