Responsiveness, UI improvements

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="header-btns">
             <button>
               <a
-                href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/register/"
-                >立即報名</a
+                href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/login/?next=/zh-hant/3D-showcase/2025/payment/courses/"
+                >立即購買</a
               >
             </button>
             <button class="learn-more-btn">了解更多</button>
