--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
           <h3>
             專為初學者而設的Blender線上課程，從基礎操作到進階應用，幫助你一步一步成為3D創作高手！
           </h3>
+
+          <div class="price-tag">
+            <h2>
+              早鳥價優惠：<span class="discounted-price">$399</span>
+              <span class="original-price">$599</span>
+            </h2>
+          </div>
           <div class="header-btns">
             <button>
               <a
@@ -262,7 +269,19 @@
                 <p>繁體中文，簡體中文，英文</p>
               </div>
             </div>
-            <button>下載課程大綱PDF</button>
+            <div class="cta-buttons">
+              <a
+                href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/register/"
+              >
+                <button>立即報名</button>
+              </a>
+              <a
+                href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/enrollment/"
+              >
+                <button>比賽詳情</button>
+              </a>
+            </div>
+            <a href="#">下載課程大綱PDF</a>
           </div>
         </div>
       </section>
