optimise header video loading time

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
           <div class="hero-container">
             <video
               src="./assets/videos/blender.mp4"
-              loop
               autoplay
               muted
+              loop
+              playsinline
+              preload="auto"
             ></video>
             <div class="header-overlay"></div>
           </div>
