optimise video loading

--- a/index.html
+++ b/index.html
@@ -56,14 +56,9 @@
 
         <div data-aos="fade-left" class="header-right">
           <div class="hero-container">
-            <video
-              src="./assets/videos/blender.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="auto"
-            ></video>
+            <video autoplay muted loop playsinline preload="auto">
+              <source src="./assets/videos/blender.mp4" type="video/mp4" />
+            </video>
             <div class="header-overlay"></div>
           </div>
         </div>
