change css class name for better compatabilities

--- a/index.html
+++ b/index.html
@@ -19,37 +19,38 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body>
-    <nav>
-      <h2>Navbar section</h2>
+  <body class="learning_res_body">
+    <nav class="learning_res_nav">
+      <h2 class="learning_res_h2">Navbar section</h2>
     </nav>
 
     <main>
-      <header>
+      <header class="learning_res_header">
         <div data-aos="fade-right" class="header-left">
-          <h1>
+          <h1 class="learning_res_h1">
             <span id="twenty-hour">
               <span id="header-num-count"></span>小時</span
             ><br />從零開始<br />掌握3D世界!
           </h1>
-          <h3>
+          <h3 class="learning_res_h3">
             專為初學者而設的Blender線上課程，從基礎操作到進階應用，幫助你一步一步成為3D創作高手！
           </h3>
 
           <div class="price-tag">
-            <h2>
+            <h2 class="learning_res_h2">
               早鳥價優惠：<span class="discounted-price">$399</span>
               <span class="original-price">$599</span>
             </h2>
           </div>
           <div class="header-btns">
-            <button>
+            <button class="learning_res_button">
               <a
+                class="learning_res_a"
                 href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/login/?next=/zh-hant/3D-showcase/2025/payment/courses/"
                 >立即購買</a
               >
             </button>
-            <button class="learn-more-btn">了解更多</button>
+            <button class="learning_res_button learn-more-btn">了解更多</button>
           </div>
           <img src="./assets/images/Blender logo.svg" alt="blender-logo" />
         </div>
@@ -68,16 +69,26 @@
 
       <div class="course-overview-section">
         <div class="course-overview-left">
-          <h2>創作者的最佳起點，<br />帶你全面入門<br />Blender！</h2>
-          <h3>無需任何建模經驗，20小時的專業內容將帶你探索3D的無限可能</h3>
-          <a href="./documents/20-hour-blender-course.pdf" download>
-            <button>下載課程大綱PDF</button>
+          <h2 class="learning_res_h2">
+            創作者的最佳起點，<br />帶你全面入門<br />Blender！
+          </h2>
+          <h3 class="learning_res_h3">
+            無需任何建模經驗，20小時的專業內容將帶你探索3D的無限可能
+          </h3>
+          <a
+            class="learning_res_a"
+            href="./documents/20-hour-blender-course.pdf"
+            download
+          >
+            <button class="learning_res_button">下載課程大綱PDF</button>
           </a>
         </div>
         <div class="course-overview-right">
           <div class="course-overview-card-top-row">
             <div class="course-overview-card tilted-card">
-              <h4>適合零基礎學員，內容循序漸進，降低學習門檻</h4>
+              <h4 class="learning_res_h4">
+                適合零基礎學員，內容循序漸進，降低學習門檻
+              </h4>
               <ul>
                 <li>完全針對初學者設計，無需任何3D建模經驗</li>
                 <li>
@@ -86,7 +97,7 @@
               </ul>
             </div>
             <div data-aos="fade-up" class="course-overview-card">
-              <h4>分階段學習，提供清晰的進度規劃</h4>
+              <h4 class="learning_res_h4">分階段學習，提供清晰的進度規劃</h4>
               <ul>
                 <li>
                   課程分為6大學習模塊與76個單元，系統化拆解每個核心技術，讓學員以按自己的節奏深入學習
@@ -97,7 +108,7 @@
           </div>
           <div class="course-overview-card-bottom-row">
             <div data-aos="fade-up" class="course-overview-card">
-              <h4>強調實用性與成果導向</h4>
+              <h4 class="learning_res_h4">強調實用性與成果導向</h4>
               <ul>
                 <li>
                   學員能透過多種練習模組，掌握建模、材質、燈光、渲染與動畫的完整流程，並學會創建高品質的3D
@@ -109,7 +120,9 @@
               </ul>
             </div>
             <div data-aos="fade-up" class="course-overview-card">
-              <h4>多語言支持，學習更靈活、更國際化？</h4>
+              <h4 class="learning_res_h4">
+                多語言支持，學習更靈活、更國際化？
+              </h4>
               <ul>
                 <li>
                   課程提供繁體中文、簡體中文、英文三種語言，搭配字幕輔助，滿足不同學員需求
@@ -121,32 +134,38 @@
       </div>
 
       <div class="course-feature-section">
-        <h2 data-aos="fade-up">
+        <h2 class="learning_res_h2" data-aos="fade-up">
           不論你是對3D有興趣，還是想打造專業作品，<br />這門課程都能幫助你輕鬆入門
         </h2>
 
         <div data-aos="fade-up" class="features">
           <div data-aos="fade-up" class="feature">
             <img src="./assets/images/icons/module 1.png" alt="puzzle-piece" />
-            <h2><span class="feature-stat">6</span>大學習模塊</h2>
+            <h2 class="learning_res_h2">
+              <span class="feature-stat">6</span>大學習模塊
+            </h2>
             <div class="orange-line"></div>
           </div>
 
           <div data-aos="fade-up" class="feature">
             <img src="./assets/images/icons/unit 1.png" alt="puzzle-piece" />
-            <h2><span class="feature-stat">76</span>個單元</h2>
+            <h2 class="learning_res_h2">
+              <span class="feature-stat">76</span>個單元
+            </h2>
             <div class="orange-line"></div>
           </div>
           <div data-aos="fade-up" class="feature">
             <img src="./assets/images/icons/globe 1.png" alt="puzzle-piece" />
-            <h2><span class="feature-stat">3</span>種語言</h2>
+            <h2 class="learning_res_h2">
+              <span class="feature-stat">3</span>種語言
+            </h2>
             <div class="orange-line"></div>
           </div>
         </div>
       </div>
 
       <section id="course-highlights">
-        <h2 data-aos="fade-up">課程亮點</h2>
+        <h2 class="learning_res_h2" data-aos="fade-up">課程亮點</h2>
 
         <div
           id="carouselExampleIndicators"
@@ -172,9 +191,11 @@
               />
               <div class="carousel-overlay"></div>
               <div class="course-highlights-text-content">
-                <h2>全面掌握Blender核心技術</h2>
+                <h2 class="learning_res_h2">全面掌握Blender核心技術</h2>
                 <hr />
-                <p>從建模、材質、燈光到動畫與渲染，涵蓋3D製作的完整流程</p>
+                <p class="learning_res_p">
+                  從建模、材質、燈光到動畫與渲染，涵蓋3D製作的完整流程
+                </p>
                 <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
@@ -186,9 +207,11 @@
               />
               <div class="carousel-overlay"></div>
               <div class="course-highlights-text-content">
-                <h2>實戰導向的學習經驗</h2>
+                <h2 class="learning_res_h2">實戰導向的學習經驗</h2>
                 <hr />
-                <p>通過多階段實作練習，學員能快速累積作品，提升學習成就感</p>
+                <p class="learning_res_p">
+                  通過多階段實作練習，學員能快速累積作品，提升學習成就感
+                </p>
                 <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
@@ -200,15 +223,17 @@
               />
               <div class="carousel-overlay"></div>
               <div class="course-highlights-text-content">
-                <h2>創作高品質3D作品</h2>
+                <h2 class="learning_res_h2">創作高品質3D作品</h2>
                 <hr />
-                <p>學會運用Blender的各種工具，打造專業級靜態與動態作品</p>
+                <p class="learning_res_p">
+                  學會運用Blender的各種工具，打造專業級靜態與動態作品
+                </p>
                 <img src="./assets/images/Blender logo.svg" alt="" />
               </div>
             </div>
           </div>
           <a
-            class="carousel-control-prev"
+            class="learning_res_a carousel-control-prev"
             href="#carouselExampleIndicators"
             role="button"
             data-slide="prev"
@@ -217,7 +242,7 @@
             <span class="sr-only">Previous</span>
           </a>
           <a
-            class="carousel-control-next"
+            class="learning_res_a carousel-control-next"
             href="#carouselExampleIndicators"
             role="button"
             data-slide="next"
@@ -231,11 +256,13 @@
       <section data-aos="fade-up" id="cta">
         <div class="cta-content">
           <div class="cta-left">
-            <div class="cta-img-container"><h2>還在猶豫？</h2></div>
+            <div class="cta-img-container">
+              <h2 class="learning_res_h2">還在猶豫？</h2>
+            </div>
           </div>
           <div class="cta-right">
-            <h2>先試試我們的2小時免費課程!</h2>
-            <p>
+            <h2 class="learning_res_h2">先試試我們的2小時免費課程!</h2>
+            <p class="learning_res_p">
               凡報名參加2025年3D創作才華長示活動參賽者，即享2小時免費Blender入門課程
             </p>
             <div class="course-detail-container">
@@ -245,7 +272,7 @@
                   src="./assets/images/icons/user-group-solid.svg"
                   alt="icon1"
                 />
-                <p>適合初學者，無需任何建模經驗</p>
+                <p class="learning_res_p">適合初學者，無需任何建模經驗</p>
               </div>
 
               <div class="course-detail">
@@ -254,7 +281,7 @@
                   src="./assets/images/icons/clock-solid.svg"
                   alt="icon2"
                 />
-                <p>2小時</p>
+                <p class="learning_res_p">2小時</p>
               </div>
 
               <div class="course-detail">
@@ -263,44 +290,50 @@
                   src="./assets/images/icons/language-solid.svg"
                   alt="icon2"
                 />
-                <p>繁體中文，簡體中文，英文</p>
+                <p class="learning_res_p">繁體中文，簡體中文，英文</p>
               </div>
             </div>
             <div class="cta-buttons">
               <a
+                class="learning_res_a"
                 href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/register/"
               >
-                <button>立即報名</button>
+                <button class="learning_res_button">立即報名</button>
               </a>
               <a
+                class="learning_res_a"
                 href="https://showcase.cgge.media/zh-hant/3D-showcase/2025/enrollment/"
               >
-                <button>比賽詳情</button>
+                <button class="learning_res_button">比賽詳情</button>
               </a>
             </div>
-            <a href="#">下載課程大綱PDF</a>
+            <a class="learning_res_a" href="#">下載課程大綱PDF</a>
           </div>
         </div>
       </section>
 
       <section data-aos="fade-up" id="course-certificate">
-        <h2>課程證書</h2>
+        <h2 class="learning_res_h2">課程證書</h2>
         <div>
           <div id="IABE-certified">
-            <h2>獲得由IABE頒發的Blender認證</h2>
-            <a href="https://iabe.io/en/" target="_blank">
+            <h2 class="learning_res_h2">獲得由IABE頒發的Blender認證</h2>
+            <a
+              class="learning_res_a"
+              href="https://iabe.io/en/"
+              target="_blank"
+            >
               <img src="./assets/images/iabe_logo.png" alt="IABE Logo" />
             </a>
           </div>
-          <h2>
+          <h2 class="learning_res_h2">
             我們與全球的教育工作者設計Blender徽章系統，在這個基礎上推出Blender認証，幫助學員衡量在不同學習領域中使用
             Blender的知識和實用技能
           </h2>
         </div>
       </section>
 
-      <footer>
-        <h2>Footer Section</h2>
+      <footer class="learning_res_footer">
+        <h2 class="learning_res_h2">Footer Section</h2>
       </footer>
     </main>
 
